--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+regex = "1"
+reqwest = { version = "0.10", features = ["blocking", "json"] }
+base64 = "0.11.0"
+toml = "0.5.6"
+serde = { version = "1.0", features = ["derive"] }
